--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	main {
 		float: left;
 		width: 70%;
-		margin: 2.5%;
+		margin-left: 2.5%;
 	}
 	
 	aside {
@@ -75,7 +75,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?</h1>
+			<h1>Who are we?1</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
