--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	h2{
 		font-size: 21px;
 		color: #23629e;
-		margin-bottom: 20px;
+		margin-bottom: 10px;
 	}
 	
 	a:link {
@@ -48,7 +48,7 @@
 	main {
 		float: left;
 		width: 70%;
-		
+		margin-left: 2.5%;
 	}
 	
 	aside {
@@ -75,7 +75,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?11</h1>
+			<h1>Who are we?111</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
