--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
 	}
 	
 	footer {
-		background: #9edff;
-		color: #000000;
-		margin: auto;
-		clear: both;
+		background: #ffe6ff;
 		text-align: right;
 	}
 
