--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	h2{
 		font-size: 21px;
 		color: #23629e;
-		margin-bottom: 10px;
+		margin-bottom: 25px;
 	}
 	
 	a:link {
@@ -54,6 +54,7 @@
 	aside {
 		float: right;
 		width: 20%;
+		margin-right: 2.5%;
 	}
 	
 	footer {
