--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	<footer>
 		<p>Website design from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
 		<p>Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a></p>
-		<p>This website does not store cookies.</p?
+		<p>This website does not store cookies.</p>
 	</footer>
 
 </body>
