--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Pro-life Hamilton</title>
     <meta name="description" content="Pro-life Hamilton">
     <link rel="icon" href="favicon.png" type="image/png">
-</head>
 
 
 <style>
+	header {
+    		width:95%;
+		display: block;
+		margin: auto;
+
+		padding: 10px 0px 30px 0px;">
+	}
+	
 	h1 {
 		font-size: 25px;
 		color: #b04bc0;
@@ -58,23 +65,24 @@
 	}
 	
 	footer {
-		background: #ffe6ff;
+		background-color: #ffe6ff;
 		text-align: right;
 		margin-right: 2.5%;
 	}
 
 </style>
+</head>
 
 <body>
 	
 	<header>
-    		<img src="/pro-life-banner.png" class="center" style="width:95%; display: block; margin-left: auto; margin-right: auto; padding: 10px 0px 30px 0px;">
+    		<img src="/pro-life-banner.png" class="center">
 	</header>
 	
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?111</h1>
+			<h1>Who are we?1111</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
