--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <meta name="description" content="Pro-life Hamilton">
     <link rel="icon" href="favicon.png" type="image/png">
 
-
 <style>
 	header {
     		width:95%;
 		display: block;
 		margin: auto;
-
-		padding: 10px 0px 30px 0px;">
+		padding: 10px 0px 30px 0px;
 	}
 	
 	h1 {
