--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <style>
 	header {
     		width:95%;
-		display: block;
-		margin: auto;
-		padding: 10px 0px 30px 0px;
+		
 	}
 	
 	h1 {
@@ -80,7 +78,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?1111</h1>
+			<h1>Who are we?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
