--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <style>
 	header {
     		width:95%;
+		display: block;
+		padding: 10px 0px 30px 0px;
 		
 	}
 	
@@ -78,7 +80,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?</h1>
+			<h1>Who are we?1</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
