--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <style>
 	header {
     		
-
+		margin: 2.5%;
 		display: block;
-		padding: 10px 0px 30px 0px;
 		
 	}
 	
@@ -81,7 +80,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?11</h1>
+			<h1>Who are we?111</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
