--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en" class="no-js"> 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pro-life Hamilton</title>
-    <meta name="description" content="Pro-life Hamilton">
-    <link rel="icon" href="favicon.png" type="image/png">
+	<title>Pro-life Hamilton</title>
+	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Pro-life Hamilton">
+	<link rel="icon" href="favicon.png" type="image/png">
 
 <style>
+	
+* {
+  box-sizing: border-box;
+}
 	header {	
 		margin: 2.5%;
 	}
@@ -75,7 +79,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?11111</h1>
+			<h1>Who are we?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
