--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
 		margin-right: 2.5%;
 	}
 	
+	aside::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 	footer {
 		text-align: right;
 		margin-right: 2.5%;
@@ -79,7 +84,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?</h1>
+			<h1>Who are we1?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
