--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
 		text-align: right;
 		margin-right: 2.5%;
 	}
+	
+	@media (max-width: 600px) {
+  		main, aside {
+    			width: 100%;
+    			height: auto;
+  		}
+	}
 
 </style>
 </head>
@@ -80,7 +87,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we11?</h1>
+			<h1>Who are we111?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
