--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
 		margin-right: 2.5%;
 	}
 	
-	@media (max-width: 600px) {
+	@media (max-width: 800px) {
   		main, aside {
     			width: 100%;
     			height: auto;
+					margin-left: 2.5%;
+		margin-right: 2.5%;
+
   		}
 	}
 
