--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we1111?</h1>
+			<h1>Who are we?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
