--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	
 	@media (max-width: 800px) {
   		main, aside {
-    			width: 100%;
+    			width: 95%;
     			height: auto;
 					margin-left: 2.5%;
 		margin-right: 2.5%;
@@ -88,7 +88,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?</h1>
+			<h1>Who are we?1</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
