--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
   		main, aside {
     			width: 95%;
     			height: auto;
-					margin-left: 2.5%;
-		margin-right: 2.5%;
-
+			margin: 2.5%;
   		}
 	}
 
@@ -88,7 +86,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?1</h1>
+			<h1>Who are we?11</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
