--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 	a:link {
  		color: #23629e;
 		text-decoration: none;
+		margin-bottom: 20px;
 	}
 
 	a:visited {
   		color: #b04bc0;
+				margin-bottom: 20px;
+
 	}
 	
 	a:hover {
@@ -86,7 +89,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?11</h1>
+			<h1>Who are we?111</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
