--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 	a:link {
  		color: #23629e;
 		text-decoration: none;
-		margin-bottom: 20px;
+		padding: 20px;
 	}
 
 	a:visited {
   		color: #b04bc0;
-				margin-bottom: 20px;
+		padding: 20px;
 
 	}
 	
@@ -89,7 +89,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?111</h1>
+			<h1>Who are we?1111</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
