--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
 		margin-bottom: 25px;
 	}
 	
+	p {
+		margin-bottomn:25px;
+	}
+	
 	a:link {
  		color: #23629e;
 		text-decoration: none;
-		padding: 20px;
 	}
 
 	a:visited {
   		color: #b04bc0;
-		padding: 20px;
-
 	}
 	
 	a:hover {
@@ -89,7 +90,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?1111</h1>
+			<h1>Who are we?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
