--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
 		margin-bottom: 25px;
 	}
 	
-	p {
-		margin-bottomn:25px;
-	}
-	
 	a:link {
  		color: #23629e;
 		text-decoration: none;
@@ -50,6 +46,8 @@
 	img {
  		width: 100%;
   		height: auto;
+		margin-top: 20px;
+		margin-bottom: 20px;
 	}
 	
 	main {
@@ -90,7 +88,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?</h1>
+			<h1>Who are we1?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
