--- a/index.html
+++ b/index.html
@@ -18,11 +18,21 @@
 	h1 {
 		font-size: 25px;
 		color: #b04bc0;
+		padding: 0px;
+		margin-bottom: 0px;
+		margin-top: 0px;
 	}
 	
 	h2{
 		font-size: 21px;
 		color: #23629e;
+		margin-bottom: 25px;
+	}
+	
+	
+	h3{
+		font-size: 18px;
+		color: #000000;
 		margin-bottom: 25px;
 	}
 	
@@ -88,7 +98,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we11?</h1>
+			<h1>Who are we111?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
