--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 		margin-top: 0px;
 	}
 	
+	
+	p {
+		
+		padding: 0px;
+		margin-bottom: 0px;
+		margin-top: 0px;
+	}
+	
 	h2{
 		font-size: 21px;
 		color: #23629e;
@@ -30,7 +38,7 @@
 	}
 	
 	
-	h3{
+	h3 {
 		font-size: 18px;
 		color: #000000;
 		margin-bottom: 25px;
@@ -98,7 +106,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we111?</h1>
+			<h1>Who are we1111?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
