--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	
 	p {	
 		padding: 0px;
-		margin-top: 10px;
-		margin-bottom: 20px;
+		margin-top: 5px;
+		margin-bottom: 30px;
 	}
 	
 	h2{
@@ -105,7 +105,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we11111?</h1>
+			<h1>Who are we?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
