--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
 		font-size: 25px;
 		color: #b04bc0;
 		padding: 0px;
-		margin-bottom: 0px;
 		margin-top: 0px;
+		margin-bottom: 10px;
+
 	}
 	
 	
 	p {	
 		padding: 0px;
-		margin-top: 5px;
+		margin-top: 0px;
 		margin-bottom: 30px;
 	}
 	
 	h2{
 		font-size: 21px;
 		color: #23629e;
-		margin-bottom: 15px;
+		margin-bottom: 0px;
 	}
 	
 	
@@ -105,7 +106,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?</h1>
+			<h1>Who are we?1</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
