--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 		margin-bottom: 30px;
 	}
 	
+	a {	
+		padding: 0px;
+		margin-top: 30px;
+		margin-bottom: 60px;
+	}
+	
 	a:link {
  		color: #23629e;
 		text-decoration: none;
@@ -97,7 +103,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?111</h1>
+			<h1>Who are we?1111</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
