--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 		margin-bottom: 10px;
 	}
 	
+	h3{
+		font-size: 21px;
+		color: #000000;
+		margin-bottom: 0px;
+	}
+	
 	p {	
 		padding: 0px;
 		margin-top: 0px;
 		margin-bottom: 30px;
-	}
-	
-	a {	
-		padding: 0px;
-		margin-top: 30px;
-		margin-bottom: 60px;
 	}
 	
 	a:link {
@@ -103,7 +103,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?1111</h1>
+			<h1>Who are we?1</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
@@ -115,7 +115,7 @@
 			
 		<article>
 			<h2>We deliver C-233 bronchures to Hamilton homes:</h2>
-			<p>Currently 1250 have been delivered.</p>
+			<h3>Currently 1250 have been delivered.</h3>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
 	    			<img src="/defend_girls.png">
 			</a>
