--- a/index.html
+++ b/index.html
@@ -29,12 +29,6 @@
 		margin-bottom: 10px;
 	}
 	
-	h3{
-		font-size: 14px;
-		color: #000000;
-		margin-bottom: 10px;
-	}
-	
 	p {	
 		padding: 0px;
 		margin-top: 0px;
@@ -103,7 +97,7 @@
 	<main role="main">
 
 		<article>	
-			<h1>Who are we?11</h1>
+			<h1>Who are we?</h1>
 			<p>We are a pro-life organization located in Hamilton, Ontario, Canada.</p>
 			
 			<h1>What do we do?</h1>
@@ -115,7 +109,7 @@
 			
 		<article>
 			<h2>We deliver C-233 bronchures to Hamilton homes:</h2>
-			<h3>Currently 1250 have been delivered.</h3>
+			<p>Currently 1250 have been delivered.</p>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCK-jsO5aHyPRnLotl2B2710aKwor-knma7SnKfJ-CXAY1aA/viewform">
 	    			<img src="/defend_girls.png">
 			</a>
