--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 		<p>Website design from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
 		<p>Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a></p>
 		<p>This website does not store cookies.</p>
+		<p>Updated Jan 10, 2021</p>
 	</footer>
 
 </body>
