--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
 		<p>At Atwell, we are here to walk you through all the options around your unexpected pregnancy and address any questions you may have. We provide free medical-grade pregnancy tests and pregnancy confirmation through ultrasound. We will be with you every step of the way in interpreting your results.</p>
 
 		<h2>Resource links from Pro-life Hamilton</h2>
-		<p>Text document with several questions and answers in the form of a mock debate:</p>
-		<a href="Pro-life_Questions_and_Answers.txt" download>Click to download text documnt</a>
+		<a href="Pro-life_Questions_and_Answers.txt" download>Pro-life questions and answers. Click to download.</a>
 		
 	</aside>
 	
