--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
 		float: left;
 		width: 70%;
 		margin-left: 2.5%;
+		margin-botton: 30px;
 	}
 	
 	aside {
 		float: right;
 		width: 20%;
 		margin-right: 2.5%;
+		margin-bottom: 100px;
 	}
 	
 	footer {
