--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 
 		<h2>Resource links from Pro-life Hamilton</h2>
 		<a href="Pro-life_Questions_and_Answers.txt" download>Pro-life questions and answers. Click to download.</a>
+		<a href="website.zip" download>Pro-life Hamilton website directory (Requires password!). Click to download.</a>
+
 		
 	</aside>
 	
