--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
 		margin-top: 0px;
 		margin-bottom: 30px;
 	}
-	
-	a {
-		margin-bottom: 10px;
-	}
-	
+		
 	a:link {
  		color: #23629e;
 		text-decoration: none;
@@ -161,10 +157,16 @@
 	
 	
 	<footer>
-		<p>Website design from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
-		<p>Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a></p>
-		<p>This website does not store cookies.</p>
-		<p>Updated Jan 12, 2021</p>
+		
+		<main>
+			<p>Website design from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
+			<p>Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a></p>
+		</main>
+		
+		<aside>
+			<p>This website does not store cookies.</p>
+			<p>Updated Jan 12, 2021</p>
+		</aside>
 	</footer>
 
 </body>
