--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 	a:hover {
   		text-decoration: underline;
 	}
+	
+	a {	
+		padding: 0px;
+		margin-top: 30px;
+		margin-bottom: 30px;
+	}
 		
 	article {
    		border-bottom: 2px dotted #999;
