--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 		margin-bottom: 10px;
 	}
 	
+	h3{
+		font-size: 21px;
+		color: #000000;
+		margin-bottom: 0px;
+	}
+	
 	p {	
 		padding: 0px;
 		margin-top: 0px;
@@ -47,12 +53,6 @@
   		text-decoration: underline;
 	}
 	
-	a {	
-		padding: 0px;
-		margin-top: 30px;
-		margin-bottom: 30px;
-	}
-		
 	article {
    		border-bottom: 2px dotted #999;
 	}
@@ -163,13 +163,12 @@
 	<footer>
 		
 		<main>
-			<p>Website design from <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
-			<p>Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a></p>
+			<h3>Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a></h3>
 		</main>
 		
 		<aside>
-			<p>This website does not store cookies.</p>
-			<p>Updated Jan 12, 2021</p>
+			<h3>This website does not store cookies.</h3>
+			<h3>Updated Jan 12, 2021</h3>
 		</aside>
 	</footer>
 
