--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
   		text-decoration: underline;
 	}
 	
+	
+	a.navigation-link {
+  padding: 0px 30px;
+  word-wrap: normal;
+  display: inline-block;
+}
+	
 	article {
    		border-bottom: 2px dotted #999;
 	}
