--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
 	}
 	
 	
-	a.navigation-link {
-  padding: 30px 30px;
-  word-wrap: normal;
-  display: inline-block;
+.container ul {
+	display: inline-block;
+	margin: 30px 0;
+	padding: 0;
 }
-	
 	article {
    		border-bottom: 2px dotted #999;
 	}
@@ -159,7 +158,7 @@
 		<p>At Atwell, we are here to walk you through all the options around your unexpected pregnancy and address any questions you may have. We provide free medical-grade pregnancy tests and pregnancy confirmation through ultrasound. We will be with you every step of the way in interpreting your results.</p>
 
 		<h2>Resource links from Pro-life Hamilton</h2>
-		<a href="Pro-life_Questions_and_Answers.txt" download>Pro-life questions and answers. Click to download.</a>
+		<ul><a href="Pro-life_Questions_and_Answers.txt" download>Pro-life questions and answers. Click to download.</a></ul>
 		<a href="website.zip" download>Pro-life Hamilton website directory (Requires password!). Click to download.</a>
 
 		
