--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 	}
 		
 	a:link {
+		text-decoration: none;
  		color: #23629e;
 	}
 
@@ -54,11 +55,9 @@
 	}
 	
 	
-.container ul {
-	display: inline-block;
-	margin: 30px 0;
-	padding: 0;
-}
+	.container ul {
+		margin: 30px 0px 0px 0px;
+	}
 	article {
    		border-bottom: 2px dotted #999;
 	}
