--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 	
 	
 	.container ul {
-		margin: 30px 0px 0px 0px;
+		margin-bottom: 10px;
 	}
+	
 	article {
    		border-bottom: 2px dotted #999;
 	}
