--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 		<h2>Resource links from Pro-life Hamilton</h2>
 		<ul><a href="Pro-life_Questions_and_Answers.txt" download>Pro-life questions and answers. Click to download.</a></ul>
-		<a href="website.zip" download>Pro-life Hamilton website directory (Requires password!). Click to download.</a>
+		<ul><a href="website.zip" download>Pro-life Hamilton website directory (Requires password!). Click to download.</a></ul>
 
 		
 	</aside>
@@ -170,7 +170,6 @@
 		<main>
 			<h3>Contact: <a href="mailto:prolifehamilton@protonmail.com">prolifehamilton@protonmail.com</a></h3>
 			<h3>This website does not store cookies.</h3>
-
 		</main>
 		
 		<aside>
