--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 		<p>At Atwell, we are here to walk you through all the options around your unexpected pregnancy and address any questions you may have. We provide free medical-grade pregnancy tests and pregnancy confirmation through ultrasound. We will be with you every step of the way in interpreting your results.</p>
 
 		<h2>Resource links from Pro-life Hamilton</h2>
-		<a href="Pro-life_Questions_and_Answers.txt" download>Pro-life questions and answers.</a>
+		<a href="Pro-life_Questions_and_Answers.txt" download>Pro-life questions and answers</a>
 		<br><br>
-		<a href="website.zip" download>Pro-life Hamilton website directory (Requires password!).</a>
+		<a href="website.zip" download>Pro-life Hamilton website directory (Requires password!)</a>
 
 		
 	</aside>
