--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 		<h2>Resource links from Pro-life Hamilton</h2>
 		<a href="Pro-life_Questions_and_Answers.txt" download>Pro-life questions and answers</a>
 		<br><br>
-		<a href="website.zip" download>Pro-life Hamilton website directory (Requires password!)</a>
+		<a href="website.zip" download>Pro-life Hamilton website directory (Requires password)</a>
 
 		
 	</aside>
