--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@
 		<p>Hamilton Against Abortion (HAA) is a grassroots movement dedicated to educating local individuals on the realities of abortion. We do this by equipping the Hamilton Region on how to defend the pro-life position and by taking the message to the streets. We use abortion victim imagery along with other resources, and unmask the truth of abortion to the general public.</p>
 	
 		<a href="https://www.facebook.com/niagaraagainstabortion/">Niagara Against Abortion</a>
-		<a href="https://www.facebook.com/niagaraagainstabortion"><img src="haa.png"></a>
+		<a href="https://www.facebook.com/niagaraagainstabortion"><img src="naa.png"></a>
 		<p>Niagara Against Abortion (NAA) is a grassroots movement dedicated to educating local individuals on the realities of abortion. We do this by equipping the Niagara Region on how to defend the pro-life position and by taking the message to the streets. We use abortion victim imagery along with other resources, and unmask the truth of abortion to the general public.</p>
-
-		
+	
 		<a href="https://hamiltonrighttolife.org/">Hamilton Right to Life</a>
 		<a href="https://hamiltonrighttolife.org/"><img src="hrtl.jpeg"></a>
 		<p>Hamilton Right to Life is an educational non-political, non-denominational organization (Charitable Registration No.: 118951862RR0001). We promote respect for all human life from conception to natural death through education.</p>
